# m-calc

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  appveyor.yml  meson.build  meson_options.txt  readme.md
.ci/: build.py  install.py  test.py
src/: meson.build
src/include/: meson.build  operations.h  project.h
src/main/: main.c  meson.build  operations.c  project.c
src/test/: meson.build  test.c  test_runner.c
